# ComfyUI-Qwen3-TTS-Triton

./: .gitignore  LICENSE  README.md  __init__.py  install.py  nodes.py  pyproject.toml  requirements.txt
benchmark/: BENCHMARK.md
workflows/: tts_custom_voice_hybrid.json  tts_custom_voice_hybrid_tq.json  tts_voiceclone.json  tts_voiceclone_tq.json
